Tried spacing solution for UPS button and prevented user from clicking share before done

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -50,6 +50,8 @@
   font-size: x-large;
   font-weight: bold;
   width: 75vw;
+  height: calc(var(--vh, 1vh) * 5); /*VH*/
+  font-size: x-large;
 }
 
 .undoButton:hover {
