--- a/src/styles/Toast.module.css
+++ b/src/styles/Toast.module.css
@@ -10,7 +10,7 @@
 
     transform: translate(-50%, 0);
     border-radius: 10px;
-    z-index: 8;
+    z-index: 12;
     font-weight: bold;
     font-size: large;
 
